<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.togocourier.ui.fragment.customer.MyPostFragment">

    <LinearLayout
        android:id="@+id/tabLay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:weightSum="1.5">

        <Button
            android:id="@+id/newBtn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@drawable/blue_left_round"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/new_txt"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textNormalSize" />

        <View
            android:id="@+id/leftSeparator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/new_post_border_color" />

        <Button
            android:id="@+id/pendingBtn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@drawable/white_rectangle_shap"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/pending"
            android:textAllCaps="false"
            android:textColor="@color/new_post_border_color"
            android:textSize="@dimen/textNormalSize" />

        <View
            android:id="@+id/rightSeparator"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/new_post_border_color" />

        <Button
            android:id="@+id/completeBtn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:background="@drawable/white_right_round"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/completed"
            android:textAllCaps="false"
            android:textColor="@color/new_post_border_color"
            android:textSize="@dimen/textNormalSize" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/childFragmentPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/colorWhite" />

</LinearLayout>
